--- a/src/components/seeQuery.css
+++ b/src/components/seeQuery.css
@@ -10,3 +10,18 @@
 .seeAnswers:hover{
 	color:black;
 }
+
+#submitAnswer{
+	background-color:#715C8C; 
+	color: white;
+	width: 180px;
+	height: 40px;
+	margin-left: 500px;
+	margin-top: 50px;
+	border: none;
+	cursor: pointer;
+	text-decoration:none;
+	font-size: 18px;
+	margin-bottom: 70px;
+	border-radius: 5px;
+}
